@@ -3,6 +3,6 @@
   <string id="30002">High</string>
   <string id="30003">Low</string>
   <string id="30004">Live</string>
-  <string id="30005">Page</string>
-  <string id="30006">Video not available.</string>
+  <string id="30005">Video not available.</string>
+  <string id="30006">Unable to retrieve the live stream.</string>
 </strings>
