@@ -3,6 +3,6 @@
   <string id="30002">Alta</string>
   <string id="30003">Bassa</string>
   <string id="30004">Diretta</string>
-  <string id="30005">Pagina</string>
-  <string id="30006">Video non disponibile.</string>
+  <string id="30005">Video non disponibile.</string>
+  <string id="30006">Impossibile recuperare lo stream della diretta.</string>
 </strings>
