@@ -1,3 +1,7 @@
+[B]Version 1.0.2[/B]
+- Updated to the new neverwise library.
+- Small bugfix/improvements.
+
 [B]Version 1.0.1[/B]
 - Fixed bug: now videos played correctly.
 - Updated radio streams.
